# GoMahjong

./: .gitignore  README.md
DevDiary/: 提示词.md  架构设计.md
GoMahjong/: docker-compose.yml  go.work  go.work.sum  init-mongo.js
GoMahjong/auth/: go.mod  go.sum  main.go
GoMahjong/common/: go.mod  go.sum
GoMahjong/connector/: go.mod  go.sum  main.go
GoMahjong/core/: go.mod  go.sum  main.go
GoMahjong/framework/: go.mod
GoMahjong/game/: go.mod  go.sum  main.go
GoMahjong/game-cpp/: CMakeLists.txt  conanfile.txt
GoMahjong/game-cpp/config/dev/: application.json
GoMahjong/game-cpp/include/bootstrap/: app.hpp  server_hub.h
GoMahjong/game-cpp/include/domain/game/engine/: engine.h  engine_context.h
GoMahjong/game-cpp/include/domain/game/engine/mahjong/: hu_searcher.h  material.h  player_image.h  riichi_mahjong4p_engine.h
GoMahjong/game-cpp/include/domain/game/engine/mahjong/timer/: player_ticker.h  turn_manager.h
GoMahjong/game-cpp/include/domain/game/event/: game_event_pool.hpp  mahjong_game_event.h
GoMahjong/game-cpp/include/domain/game/handler/: create_room_handler.h  mahjong_event_handler.h  play_tile_handler.h
GoMahjong/game-cpp/include/domain/game/outbound/: out_dispatcher.h
GoMahjong/game-cpp/include/domain/game/room/: room.h  room_actor.h  room_executor.h  room_manager.h
GoMahjong/game-cpp/include/domain/game/service/: game_service.hpp
GoMahjong/game-cpp/include/infrastructure/config/: config.hpp
GoMahjong/game-cpp/include/infrastructure/discovery/: etcd_client.hpp  service_registry.hpp
GoMahjong/game-cpp/include/infrastructure/log/: logger.hpp
GoMahjong/game-cpp/include/infrastructure/net/channel/: channel_handler_context.h  channel_pipeline.h  i_channel.h  i_channel_handler.h  message.h  tcp_channel.h
GoMahjong/game-cpp/include/infrastructure/net/channel/codec/: length_field_decoder.h  length_field_encoder.h  protobuf_decoder.h  protobuf_encoder.h
GoMahjong/game-cpp/include/infrastructure/net/dispatcher/: dispatcher.h  dispatcher_handler.h
GoMahjong/game-cpp/include/infrastructure/net/listener/: i_listener.h  tcp_listener.h
GoMahjong/game-cpp/include/infrastructure/net/reliability/: auth_handler.h  wild_endpoint.h  wild_endpoint_manager.h
GoMahjong/game-cpp/include/infrastructure/net/session/: session.h  session_manager.h
GoMahjong/game-cpp/include/infrastructure/net/transport/: i_transport.h  tcp_transport.h
GoMahjong/game-cpp/include/infrastructure/persistence/: mongo_client.hpp  mongo_pool.hpp
GoMahjong/game-cpp/include/infrastructure/rpc/: grpc_server.hpp
GoMahjong/game-cpp/include/infrastructure/util/: coroutine.hpp  id_generator.hpp  memory.hpp  object_pool.hpp  random_util.hpp  string_util.hpp  thread_pool.hpp  time_util.hpp  timer_thread.h  timing_wheel.h
GoMahjong/game-cpp/include/infrastructure/util/coroutine/: awaiters.hpp  generator.hpp  task.hpp
GoMahjong/game-cpp/include/infrastructure/util/memory/: fixed_size_pool.hpp  typed_object_pool.hpp
GoMahjong/game-cpp/proto/: auth.proto  envelope.proto  game_mahjong.proto  game_service.proto  heartbeat.proto
GoMahjong/game-cpp/proto/etcd/authpb/: auth.proto
GoMahjong/game-cpp/proto/etcd/etcdserverpb/: rpc.proto
GoMahjong/game-cpp/proto/etcd/mvccpb/: kv.proto
GoMahjong/game-cpp/src/: main.cpp
GoMahjong/game-cpp/src/bootstrap/: app.cpp  server_hub.cpp
GoMahjong/game-cpp/src/domain/game/engine/: engine.cpp  engine_context.cpp
GoMahjong/game-cpp/src/domain/game/engine/mahjong/: hu_searcher.cpp  material.cpp  player_image.cpp  riichi_mahjong4p_engine.cpp  riichi_mahjong4p_opt_selector.cpp  riichi_mahjong4p_push.cpp
GoMahjong/game-cpp/src/domain/game/engine/mahjong/timer/: player_ticker.cpp  turn_manager.cpp
GoMahjong/game-cpp/src/domain/game/handler/: create_room_handler.cpp  mahjong_event_handler.cpp  play_tile_handler.cpp
GoMahjong/game-cpp/src/domain/game/outbound/: out_dispatcher.cpp
GoMahjong/game-cpp/src/domain/game/room/: room.cpp  room_actor.cpp  room_executor.cpp  room_manager.cpp
GoMahjong/game-cpp/src/domain/game/service/: game_service.cpp
GoMahjong/game-cpp/src/infrastructure/config/: config.cpp  config.hpp
GoMahjong/game-cpp/src/infrastructure/discovery/: etcd_client.cpp  service_registry.cpp
GoMahjong/game-cpp/src/infrastructure/log/: logger.cpp  logger.hpp
GoMahjong/game-cpp/src/infrastructure/net/: frame_codec.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_server.cpp  tcp_server.hpp
GoMahjong/game-cpp/src/infrastructure/net/channel/: channel_pipeline.cpp  tcp_channel.cpp
GoMahjong/game-cpp/src/infrastructure/net/channel/codec/: length_field_decoder.cpp  length_field_encoder.cpp  protobuf_decoder.cpp  protobuf_encoder.cpp
GoMahjong/game-cpp/src/infrastructure/net/dispatcher/: dispatcher.cpp  dispatcher_handler.cpp
GoMahjong/game-cpp/src/infrastructure/net/listener/: tcp_listener.cpp
GoMahjong/game-cpp/src/infrastructure/net/reliability/: auth_handler.cpp  wild_endpoint.cpp  wild_endpoint_manager.cpp
GoMahjong/game-cpp/src/infrastructure/net/session/: session.cpp  session_manager.cpp
GoMahjong/game-cpp/src/infrastructure/net/transport/: i_transport.cpp  tcp_transport.cpp
GoMahjong/game-cpp/src/infrastructure/persistence/: mongo_client.cpp  mongo_pool.cpp
GoMahjong/game-cpp/src/infrastructure/rpc/: grpc_server.cpp
GoMahjong/game-cpp/src/infrastructure/util/: id_generator.cpp  random_util.cpp  string_util.cpp  thread_pool.cpp  time_util.cpp  timer_thread.cpp  timing_wheel.cpp
GoMahjong/game-cpp/tests/: coroutine_test.cpp  game_event_pool_test.cpp  game_timer_test.cpp  integration_test.cpp  memory_pool_test.cpp  mongo_pool_test.cpp  room_test.cpp  server_hub_test.cpp  tcp_server_test.cpp
GoMahjong/gate/: go.mod  go.sum  main.go
GoMahjong/hall/: go.mod  go.sum  main.go
GoMahjong/march/: go.mod  go.sum  main.go
GoMahjong/player/: go.mod  main.go
GoMahjong/runtime/: go.mod  go.sum
GoMahjong/user/: go.mod  (+1 more)
rule/: README.md  trueskill算法.md  一炮多响.md  取整问题.md  宝牌规则详解.md  庄家.md  役种完整列表.md  振听规则详解.md  支付分数.md  无除法运算.md  段位分增减.md  流局规则详解.md  番符.md  立直规则详解.md  立直麻将规则手册.md  筋牌.md  连庄.md  食断.md  食替.md
(+387 files in other folders)
